--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,10 @@
 
 @layer utilities {
     .p-safe {
-        padding: env(safe-area-inset-top) env(safe-area-inset-right)
-            env(safe-area-inset-bottom) env(safe-area-inset-left);
+        padding:
+            env(safe-area-inset-top)
+            env(safe-area-inset-right)
+            env(safe-area-inset-bottom)
+            env(safe-area-inset-left);
     }
 }
